[gd_scene load_steps=2 format=3 uid="uid://bvhq1ebik4ldt"]

[ext_resource type="Script" uid="uid://bcob2ksvib5lm" path="res://scenes/world/slime_spawner.gd" id="1_6o2d5"]

[node name="SlimeSpawner" type="Node3D"]
script = ExtResource("1_6o2d5")
slime_type = 1

[node name="Marker3D" type="Marker3D" parent="."]
gizmo_extents = 5.0

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
